Agregar funcionalidad de recuperación y reinicio de contraseña; incluir nuevos DTOs, controladores y rutas, y configurar nodemailer para el envío de correos

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,13 @@ DATABASE_URL="mysql://root:password@localhost:3306/nombre_base_de_datos"
 JWT_SECRET="tu_clave_secreta" 
 NODE_ENV=development
 PORT=3000
+
+# Configuración de email (por ejemplo, usando Ethereal o cualquier otro SMTP)
+EMAIL_HOST=smtp.ethereal.email
+EMAIL_PORT=587
+EMAIL_USER=tu_usuario_email
+EMAIL_PASS=tu_contraseña_email
+EMAIL_FROM="No Reply <noreply@example.com>"
+
+# URL de la interfaz (para construir el enlace de reinicio)
+FRONTEND_URL=http://localhost:3000
