Agregar verificación de CAPTCHA en el proceso de autenticación; incluir middleware para validar el token CAPTCHA y actualizar la configuración del entorno.

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ EMAIL_FROM="No Reply <noreply@example.com>"
 
 # URL de la interfaz (para construir el enlace de reinicio)
 FRONTEND_URL=http://localhost:3000
+
+# Configuración de reCAPTCHA (clave de prueba de Google)
+RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
