--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
     "@hcaptcha/react-hcaptcha": "^1.9.3",
+    "@hookform/resolvers": "^3.3.4",
+    "axios": "^1.8.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "jose": "^5.2.2",
